Unit tests and recommendation controller
